fix (2312): fixed issue when placeholder is not clipped on small width in DatePicker

--- a/src/components/form/DatePicker/date-picker.scss
+++ b/src/components/form/DatePicker/date-picker.scss
@@ -36,6 +36,9 @@
   color: var(--placeholderText);
   text-align: left;
   white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
 }
 
 .alt-date-picker__icon {
